--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.13.1"
+        "bootstrap-icons": "^1.13.1",
+        "jquery": "^3.7.1"
     }
 }
