--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.13.1",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "jsdom": "^26.1.0"
     }
 }
